traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:9: error: reassignment to val
  if(getX = large-1 && getY = hauteur-1){
          ^